Colab - Graph of protein structure evaluation

--- a/Colab/Graph_of_protein_structure_evaluation.ipynb
+++ b/Colab/Graph_of_protein_structure_evaluation.ipynb
@@ -63,7 +63,7 @@
         "# @title ## 📁 Files for analysis ♾️ Archivos para el análisis\n",
         "# @markdown ### **🇺🇸** - Select whether you will work with tutorial files or with your own files\n",
         "# @markdown ### **🇪🇸** - Seleccione si va a trabajar con archivos del tutorial o con archivos propios\n",
-        "files = 'Own files - Archivos propios'# @param ['Tutorial files - Archivos del tutorial', 'Own files - Archivos propios']\n",
+        "files = 'Tutorial files - Archivos del tutorial'# @param ['Tutorial files - Archivos del tutorial', 'Own files - Archivos propios']\n",
         "# @markdown #### 🔴 **🇺🇸 - Note:** add the address of your folder, example: ***folder_a*** or ***folder_a/folder_b***\n",
         "# @markdown #### 🔴 **🇪🇸 - Nota:** agregue la dirección de su carpeta, ejemplo: ***carpeta_a*** o ***carpeta_a/carpeta_b***\n",
         "drive_folder_path = \"MD\" #@param {type:\"string\"}\n",
