Colab - Graph of protein structure evaluation

--- a/Colab/Graph_of_protein_structure_evaluation.ipynb
+++ b/Colab/Graph_of_protein_structure_evaluation.ipynb
@@ -54,7 +54,7 @@
         "cellView": "form",
         "id": "rMORIrbm7rVp"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "id": "b-rKNgUm71fO",
         "outputId": "b8ccf5b0-35d2-49cd-b94e-d2069622937d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,20 +241,20 @@
         "\n",
         "# Rotar los valores del eje x horizontalmente\n",
         "plt.xticks(rotation=0)\n",
-        "plt.savefig('heatmap.png', dpi=dpi_val, bbox_inches='tight')  # Usa la variable dpi_val para los DPI\n",
+        "plt.savefig(f'{titulo}.png', dpi=dpi_val, bbox_inches='tight')  # Usa la variable dpi_val para los DPI\n",
         "# Mostrar la gráfica en pantalla\n",
         "plt.show()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 885
+          "height": 647
         },
         "cellView": "form",
         "id": "KTwWcXGX4nko",
-        "outputId": "96e4bff8-b171-46f1-e764-4fc5b3ae9b14"
+        "outputId": "7fe90ecb-10d7-489b-d3dd-bda85976d5d6"
       },
-      "execution_count": 63,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "display_data",
